--- a/templates/index.html
+++ b/templates/index.html
@@ -144,7 +144,7 @@
     <div class="container">
         <div class="ceo-grid">
             <div class="ceo-image">
-                <img src="{{ url_for('static', filename='images/samples/models/CEO.png') }}" alt="Ateeb Taseer - CEO">
+                <img src="{{ url_for('static', filename='images/samples/models/Director.jpeg') }}" alt="Ateeb Taseer - CEO">
             </div>
             <div class="ceo-content">
                 <h2>Leadership</h2>
