--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">    
     <link rel="stylesheet" href="{{ url_for('static', filename='css/enhanced.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mobile-fixes.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}">
     
     {% block additional_head %}{% endblock %}
 </head>
@@ -59,6 +60,9 @@
                             <i class="fas fa-shield-alt"></i> Admin
                         </a>
                     {% endif %}
+                    <a href="{{ url_for('profile') }}" class="btn btn-outline">
+                        <i class="fas fa-user"></i> Profile
+                    </a>
                     <a href="{{ url_for('cart') }}" class="btn btn-outline">
                         <i class="fas fa-shopping-cart"></i>
                         <span id="cart-count">0</span>
